--- a/BallClub/BallClub/Storyboards/Friends.storyboard
+++ b/BallClub/BallClub/Storyboards/Friends.storyboard
@@ -54,13 +54,16 @@
                                         <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="upload_image" translatesAutoresizingMaskIntoConstraints="NO" id="HWv-Hc-7Bu">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sample_profile" translatesAutoresizingMaskIntoConstraints="NO" id="HWv-Hc-7Bu">
                                         <rect key="frame" x="20" y="23" width="110" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                                 <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="55"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
@@ -252,6 +255,6 @@
         <image name="back" width="22" height="22"/>
         <image name="ic_map" width="100" height="100"/>
         <image name="online" width="300" height="300"/>
-        <image name="upload_image" width="321" height="321"/>
+        <image name="sample_profile" width="400" height="400"/>
     </resources>
 </document>
